--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <p class="text-sm">What our student say about us</p>
             </div>
 
-            <div class="justify-center  md:flex md:justify-between md:px-12 items-center mt-20 relative">
+            <div class="justify-center w-60  md:flex md:justify-between md:px-12 items-center mt-20 relative">
                 <div class="bg-white relative mt-30 p-6 w-130 mb-8 px-12 shadow-xl">
                     <img src="assets/th (1) 4.png" class="absolute left-60 bottom-40">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
