--- a/index.html
+++ b/index.html
@@ -407,16 +407,16 @@
                 <p class="text-sm">What our student say about us</p>
             </div>
 
-            <div class="justify-center w-60  md:flex md:justify-between md:px-12 items-center mt-20 relative">
-                <div class="bg-white relative mt-30 p-6 w-130 mb-8 px-12 shadow-xl">
-                    <img src="assets/th (1) 4.png" class="absolute left-60 bottom-40">
+            <div class="justify-center w-60 ml-20  md:flex md:justify-between md:px-12 items-center mt-20 relative">
+                <div class="bg-white relative mt-30 p-6 md:w-130 mb-8 md:px-12 shadow-xl">
+                    <img src="assets/th (1) 4.png" class="absolute md:left-60 md:bottom-40 left-55 bottom-45">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
                         syllabus, and the guidence will be super and good to the way of explaning.</p>
                     <img src="assets/Group 1000014987.png" alt="">
                 </div>
 
-                <div class="bg-white relative mt-30 p-6 w-130 mb-8 pl-18 shadow-xl">
-                    <img src="assets/th (1) 4.png" class="absolute left-60 bottom-40">
+                <div class="bg-white relative mt-30 p-6 md:w-130 mb-8 md:pl-18 shadow-xl">
+                    <img src="assets/th (1) 4.png" class="absolute md:left-60 md:bottom-40 left-55 bottom-45">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
                         syllabus, and the guidence will be super and good to the way of explaning.</p>
                     <img src="assets/Group 1000014987.png" alt="">
