--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </p>
             <div class="flex md:justify-center md:gap-50 md:m-12 my-5 ">
                 <div
-                    class="text-white font-primary flex flex-col justify-center items-center md:border-r-1 pr-25 border-dashed">
+                    class="text-white font-primary flex flex-col justify-center items-center md:border-r-1 md:pr-25 border-dashed">
                     <img src="assets/Icon.png" alt="">
                     <h5 class="m-4">01. Learn</h5>
                     <p>Learn continually. There is always <br>
@@ -313,7 +313,7 @@
                         be your best.</p>
                 </div>
                 <div
-                    class="text-white font-primary flex flex-col justify-center items-center md:border-l-1 pl-25 border-dashed">
+                    class="text-white font-primary flex flex-col justify-center items-center md:border-l-1  md:pl-25 border-dashed">
                     <img src="assets/Icon (2).png" alt="">
                     <h5 class="m-4">03. Work</h5>
                     <p>Great companies are built in <br>
@@ -407,22 +407,22 @@
                 <p class="text-sm">What our student say about us</p>
             </div>
 
-            <div class="justify-center w-60 ml-20  md:flex md:justify-between md:px-12 items-center mt-20 relative">
-                <div class="bg-white mt-30 p-6 md:w-130 mb-8 md:px-12 shadow-xl">
+            <div class="justify-center ml-20  md:flex md:justify-between md:px-12 items-center mt-20 relative">
+                <div class="bg-white mt-30 p-6 md:w-130  mb-8 md:px-12 shadow-xl relative">
                     <img src="assets/th (1) 4.png" class="absolute md:left-60 md:bottom-40 left-55 bottom-45">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
                         syllabus, and the guidence will be super and good to the way of explaning.</p>
                     <img src="assets/Group 1000014987.png" alt="">
                 </div>
 
-                <div class="bg-white mt-30 p-6 md:w-130 mb-8 md:pl-18 shadow-xl">
+                <div class="bg-white mt-30 p-6 md:w-130 mb-8 md:px-12 md:pl-23 shadow-xl relative">
                     <img src="assets/th (1) 4.png" class="absolute md:left-60 md:bottom-40 left-55 bottom-45">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
                         syllabus, and the guidence will be super and good to the way of explaning.</p>
                     <img src="assets/Group 1000014987.png" alt="">
                 </div>
                 <div
-                    class="hidden md:block md:bg-white border border-blue-50 m-30 p-6 w-130 absolute mb-8 left-95 bottom-20 px-12 shadow-xl">
+                    class="hidden md:block md:bg-white border border-blue-50 m-30 p-6 w-130 absolute mb-8 left-80 bottom-20 px-12 shadow-xl">
                     <img src="assets/th (1) 4.png" class="absolute left-60 bottom-40">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
                         syllabus, and the guidence will be super and good to the way of explaning.</p>
