--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </header>
         <section
-            class="flex flex-col md:grid md:grid-cols-2  md:w-full md:h-auto bg-linear-to-b from-herostart to-heroend bg-linear-br from-heroend to-herostart bg-center ">
+            class="flex flex-col md:grid md:grid-cols-2  md:w-full md:h-auto bg-linear-to-b from-herostart to-heroend bg-linear-br from-heroend to-herostart bg-center relative">
             <div class="hidden md:flex md:absolute text-white top-75 right-110 ">
                 <div class="p-2 mt-2">
                     <img src="assets/element.png" alt="" class="h-32">
@@ -101,12 +101,12 @@
                 <div>
                     <p class="text-white text-2xl mx-8 md:ml-6  md:text-2xl md:mx-2 md:my-3 ">Successful coaches are
                         visionaries</p>
-                    <h2 class="text-6xl mx-6 my-10 md:text-7xl text-white font-primary md:leading-21">Good <span
+                    <h2 class="text-4xl mx-6 my-10 md:text-7xl text-white font-primary md:leading-21">Good <span
                             class="text-blue-600 md:text-blue-800">coaching</span> is good teaching & nothing else.</h2>
                 </div>
 
                 <div>
-                    <ul class="flex justify-center md:flex md:gap-4 md:ml-6">
+                    <ul class="flex justify-center flex-wrap gap-4 md:ml-6">
                         <li>
                             <a href="#" class="px-6 py-3 border-2 border-white rounded-lg text-white font-semibold">View
                                 Courses</a>
@@ -118,12 +118,12 @@
                 </div>
 
                 <div
-                    class="flex justify-between my-8 mx-5 px-1 py-2  md:justify-evenly bg-white border border-white border-1 border-opacity-30 rounded-lg md:w-140">
+                    class="relative flex flex-wrap md:flex-nowrap justify-between my-8 mx-5 px-1 py-2  md:justify-evenly bg-white border border-white border-1 border-opacity-30 rounded-lg md:w-140">
 
                     <input type="text" placeholder="What do you want to learn today?"
-                        class="px-3 md:w-128 onclick:border-none md:px-7">
+                        class="px-3 md:w-128 w-full onclick:border-none md:px-7">
                     <button
-                        class="px-2 py-1 flex md:gap-4 md:w-auto md:m-2 text-white md:px-14 md:py-4 border rounded-lg bg-linear-[120deg,#083F9B_0%,#7F56D9_100%]"><span
+                        class=" px-2 py-1  flex md:gap-4 md:w-auto md:m-2 text-white md:px-14 md:py-4 border rounded-lg bg-linear-[120deg,#083F9B_0%,#7F56D9_100%]"><span
                             class="material-symbols-outlined">
                             search
                         </span>Search</button>
@@ -322,17 +322,17 @@
                 </div>
             </div>
         </section>
-        <section class="bg-linear-to-t from-sky-100 to-white  font-primary text-center p-15 pb-20">
-            <h3 class="text-4xl mb-3 md:text-2xl ">Top <span class="text-blue-700">Categories</span> </h3>
+        <section class="bg-linear-to-t from-sky-100 to-white  font-primary text-center md:p-15 pb-20">
+            <h3 class="text-4xl mb-3 md:text-2xl">Top <span class="text-blue-700">Categories</span> </h3>
             <p class="text-md">100+ unique online course list designs</p>
-            <div class="grid grid-cols-2 md:flex justify-evenly font-primary pt-15 gap-5">
-                <div class="flex flex-col gap-8 bg-white p-12 rounded-2xl">
+            <div class="grid grid-cols-auto md:flex flex-wrap lg:flex-nowrap justify-evenly font-primary pt-15 gap-5">
+                <div class="flex flex-col gap-8 bg-white md:p-12 rounded-2xl">
                     <img src="assets/div.features-box-image.png" alt="">
-                    <h5 class="text-[20px] text-sky-950">Digtal
+                    <h5 class="md:text-[20px] text-sky-950">Digtal
                         Marketing</h5>
                     <p class="text-slate-500">25 Courses</p>
                 </div>
-                <div class="flex flex-col gap-8 bg-white p-12 rounded-2xl">
+                <div class="flex flex-col  gap-8 bg-white p-12 rounded-2xl">
                     <img src="assets/div.features-box-image (1).png" alt="">
                     <h5 class="text-[20px] text-sky-950">Web
                         Development</h5>
@@ -407,7 +407,7 @@
                 <p class="text-sm">What our student say about us</p>
             </div>
 
-            <div class="justify-center ml-20  md:flex md:justify-between md:px-12 items-center mt-20 relative">
+            <div class="justify-center md:ml-20  md:flex md:justify-between md:px-12 items-center mt-20 relative">
                 <div class="bg-white mt-30 p-6 md:w-130  mb-8 md:px-12 shadow-xl relative">
                     <img src="assets/th (1) 4.png" class="absolute md:left-60 md:bottom-40 left-55 bottom-45">
                     <p class="mb-6 mt-6">Such an amazing traniner and easily understand the entire
@@ -484,7 +484,7 @@
                     <p>Contact</p>
                 </div>
             </div>
-            <div class="flex justify-center gap-6 bg-linear-to-b from-[#0351AE]/31 to-[#A542C8]/0 py-6">
+            <div class="flex flex-wrap justify-evenly px-2 md:justify-center gap-2 md:gap-6 bg-linear-to-b from-[#0351AE]/31 to-[#A542C8]/0 py-6">
                 <img src="assets/Instagram.png" class="bg-white p-2 rounded-full">
                 <img src="assets/WhatsApp.png" class="bg-white p-2 rounded-full">
                 <img src="assets/Twitter.png" class="bg-white p-2 rounded-full">
