--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
             </div>
 
             <div
-                class="w-56 h-56 bg-transparent border border-white m-8 rounded-full rounded-b-none border-b-0 absolute top-200 right-150">
+                class="w-56 h-56 bg-transparent border border-white m-8 rounded-full rounded-b-none border-b-0 absolute bottom-[-32px] right-150">
             </div>
 
             <div
-                class="w-46 h-46 bg-transparent border border-dashed border-white m-8 rounded-full rounded-b-none border-b-0 absolute top-210 right-155">
+                class="w-46 h-46 bg-transparent border border-dashed border-white m-8 rounded-full rounded-b-none border-b-0 absolute bottom-[-32px] right-155">
             </div>
             <div
-                class="w-36 h-36 bg-transparent border border-white m-8 rounded-full rounded-b-none border-b-0 absolute top-220 right-160">
+                class="w-36 h-36 bg-transparent border border-white m-8 rounded-full rounded-b-none border-b-0 absolute bottom-[-32px] right-160">
             </div>
         </section>
         <div
